# pipeline-builder

./: CMakeLists.txt  README.md
include/: pipeline_builder.hpp
src/: lettercount_example.cpp
test/: pipeline_tests.cpp
